test/files/pos/t3946/A.java
package p;

public class A {
    protected void f() {}
}
