test/files/neg/t8700b/Baz_1.java
public enum Baz_1 {
    A {
    	public void baz1() {}
    },
    B {
        public void baz1() {}
    };

    public abstract void baz1();
    public void baz2() {}
}
